@@ -1,3 +1,7 @@
+2012-03-12  Bjorn Sarrazin <bjorn.sarrazin@cern.ch>
+	* sort input files in MergeNTUP_trf such that files with 0 events are at the end of the list
+	* add argument sortInputFiles to Configuration.py in order do be able switch above feature off
+
 2012-07-23 Attila Krasznahorkay <Attila.Krasznahorkay@cern.ch>
 	* Moved the NTUP_TRKVALID creation from the R2E step to the
 	  E2D one. This was on the request of Stephane Willocq,
